<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="AppName">Feeds</string>

    <!-- #################################################################### -->

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy_url">Copy URL</string>
    <string name="share_url">Share URL</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="import_OPML">Import OPML file</string>
    <string name="export_OPML">Export OPML file</string>
    <string name="refresh">Refresh</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>

    <!-- #################################################################### -->

    <string name="received">Received</string>
    <string name="published">Published</string>
    <string name="updated">Updated</string>
    <string name="no_feeds">Please add feeds.</string>
    <string name="no_articles">No articles found. Switch to a different feed or import feeds with an OPML XML file.</string>
    <string name="view_in_browser">Browser</string>
    <string name="feeds">Feeds</string>
    <string name="select_feed">Select feed</string>
    <string name="select_feeds">Select feeds</string>
    <string name="feedconfig_last_refresh">Last refresh:</string>
    <string name="mark_read">Mark read</string>
    <string name="feed_delete_confirmation">Are you sure you want to delete the current feed?</string>
    <string name="loading_articles">Loading articles... please wait.</string>
    <string name="pick_background_color">Pick background color</string>
    <string name="pick_text_color">Pick text color</string>
    <string name="no_feed_selected">No feed selected for widget...</string>
    <string name="article_url_copied_to_clipboard">Article URL copied to clipboard.</string>
    <string name="feed_url_copied_to_clipboard">Feed URL copied to clipboard.</string>
    <string name="copy_feed_url">Copy URL</string>
    <string name="refreshing_feeds">Refreshing feeds...</string>
    <string name="refreshing_feeds_summary">Polling feed URLs for new articles.</string>
    <string name="new_feed_entries">New articles</string>
    <string name="new_feed_entries_summary">Select to open feed reader.</string>

    <!-- #################################################################### -->

    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="select_directory">Select current directory</string>

</resources>
